src/objects/ints__TUCR_ScoreProduct__c.object
<CustomObject>
    <fields>
        <fullName>ints__Factor1__c</fullName>
        <label>Factor1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ints__Factor2__c</fullName>
        <label>Factor2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ints__Factor3__c</fullName>
        <label>Factor3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ints__Product__c</fullName>
        <label>Product</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ints__ScoreCard__c</fullName>
        <label>Score Card</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ints__ScoreDerogatoryAlert__c</fullName>
        <label>Score Derogatory Alert</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ints__Score__c</fullName>
        <label>Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ints__TransUnion_Credit_Report__c</fullName>
        <label>TransUnion Credit Report</label>
        <referenceTo>ints__TransUnion_Credit_Report__c</referenceTo>
        <relationshipLabel>TUCR Score ProductS</relationshipLabel>
        <relationshipName>TUCR_Score_ProductS</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>TUCR Score Product</label>
    <nameField>
        <displayFormat>TUCR_SP-{000000000}</displayFormat>
        <label>TUCR Score Product Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>TUCR Score ProductS</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>